// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerHeader #depth at root 1`] = `
<div
  className="c-explorer__header"
>
  <Button
    className="c-explorer__header__title"
    href="/admin/pages/undefined/"
    onClick={[MockFunction]}
  >
    <div
      className="c-explorer__header__title__inner"
    >
      <Icon
        className="icon--explorer-header"
        name="home"
      />
      <span>
        Pages
      </span>
    </div>
  </Button>
</div>
`;

exports[`ExplorerHeader #page 1`] = `
<div
  className="c-explorer__header"
>
  <Button
    className="c-explorer__header__title"
    href="/admin/pages/a/"
    onClick={[MockFunction]}
  >
    <div
      className="c-explorer__header__title__inner"
    >
      <Icon
        className="icon--explorer-header"
        name="arrow-left"
      />
      <span>
        test
      </span>
    </div>
  </Button>
</div>
`;

exports[`ExplorerHeader basic 1`] = `
<div
  className="c-explorer__header"
>
  <Button
    className="c-explorer__header__title"
    href="/admin/pages/undefined/"
    onClick={[MockFunction]}
  >
    <div
      className="c-explorer__header__title__inner"
    >
      <Icon
        className="icon--explorer-header"
        name="arrow-left"
      />
      <span>
        Pages
      </span>
    </div>
  </Button>
</div>
`;
